--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -28,13 +28,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run tests with pytest in virtual X11 environment
+    - name: Run tests with PyQt5 (using xvfb)
       run: |
         sudo apt-get update
         sudo apt-get install -y xvfb
-        xvfb-run --auto-servernum --server-args='-screen 0 1920x1080x24' pytest -v
-
-
-    - name: Run tests with pytest
-      run: |
-        PYTHONPATH=. pytest -v
+        xvfb-run --auto-servernum --server-args='-screen 0 1920x1080x24' pytest -v --cov=widgets --cov-report=term-missing
