--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -32,4 +32,4 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y xvfb
-        xvfb-run --auto-servernum --server-args='-screen 0 1920x1080x24' pytest -v --cov=widgets --cov-report=term-missing
+        xvfb-run --auto-servernum --server-args='-screen 0 1920x1080x24' pytest -v --cov=widgets --cov=main_window tests/
