--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,6 @@ var/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -119,6 +117,7 @@ compiled/
 *.bak
 docstrings_report.txt
 reports/structure.md
+scripts/*.sh
 
 # System files
 .DS_Store
