Refactor OriginalName module: UI + transform logic

--- a/.gitignore
+++ b/.gitignore
@@ -1,127 +1,62 @@
-# Byte-compiled / optimized / DLL files
+# ========================
+# Python artifacts
+# ========================
 __pycache__/
 *.py[cod]
-*$py.class
-
-# C extensions
+*.pyo
+*.pyd
 *.so
-
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
 *.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+build/
+dist/
 
-# PyInstaller
-*.manifest
-*.spec
-
-# Installer logs
-test_report.log
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-.target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# dotenv
-.env
-.env.*
-
-# virtualenv
+# ========================
+# Virtual environments
+# ========================
+.venv/
 venv/
+env/
 ENV/
-env.bak/
-venv.bak/
 
-# Spyder project settings
-.spyderproject
-.spyderworkspace
-
-# Rope project settings
-.ropeproject
-
-# mypy
-.mypy_cache/
-.dmypy.json
-compiled/
-
-# Pyre type checker
-.pyre/
-
-# Pycharm
-.idea/
-
-# VSCode
-.vscode/
-
-# Custom project ignores
-*.tmp
-*.log
-*.bak
-docstrings_report.txt
-reports/structure.md
-scripts/*.sh
-
-# vscode extensions
-.continue/
-
-# System files
+# ========================
+# OS-specific junk
+# ========================
 .DS_Store
 Thumbs.db
+ehthumbs.db
+desktop.ini
+
+# ========================
+# Editor / IDE configs
+# ========================
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# ========================
+# Logs and runtime
+# ========================
+*.log
+*.tmp
+
+# ========================
+# Logs folder (fine control)
+# ========================
+logs/*.log
+logs/*.tmp
+logs/*.json 
+
+# Allow milestone logs and folder itself
+!logs/*.md
+!logs/
+
+# Optional placeholder to keep folder tracked even when empty
+!logs/.gitkeep
+
+# ========================
+# Misc
+# ========================
+.cache/
+reports/
+test_output/
