--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -32,4 +32,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y xvfb
+      env:
+        CI: true
+      run: |
         xvfb-run --auto-servernum --server-args='-screen 0 1920x1080x24' pytest -v --cov=widgets --cov=main_window tests/
