Refactor selection logic: - Όλες οι επιλογές (Ctrl+A, click, invert, clear) γίνονται πλέον μόνο μέσω του Qt selection model, χωρίς custom selected_rows state. - Το preview και τα checked αρχεία συγχρονίζονται μόνο μέσω του selectionChanged signal. - Το χρώμα επιλογής (selected) ορίζεται αποκλειστικά από το QSS για εύκολη αλλαγή. - Το hover εμφανίζεται πλέον και πάνω σε επιλεγμένα αρχεία μέσω delegate, με εφέ lighter στο μπλε. - Καθαρίστηκε ο delegate ώστε να μην μπλέκει με το QSS και να υπάρχει πλήρης έλεγχος στο UI highlight.

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,10 @@ logs/*.json
 reports/
 test_output/
 
+# Project backups
+backups/
+backup_oncutf.sh
+
 # Backup and temporary files from editing QSS or UI files
 *.qss~        # Temporary QSS backups
 *.bak         # General backup files
