--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -29,10 +29,9 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run tests with PyQt5 (using xvfb)
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y xvfb
       env:
         CI: true
       run: |
-        xvfb-run --auto-servernum --server-args='-screen 0 1920x1080x24' pytest -v --cov=widgets --cov=main_window tests/
+        sudo apt-get update
+        sudo apt-get install -y xvfb
+        xvfb-run --auto-servernum --server-args='-screen 0 1920x1080x24' pytest -v --cov=widgets --cov=modules --cov=utils --cov=main_window tests/
