--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ desktop.ini
 # ========================
 .vscode/
 .idea/
+.cursorignore
 *.sublime-project
 *.sublime-workspace
 
@@ -60,6 +61,7 @@ logs/*.json
 .cache/
 reports/
 test_output/
+.continue
 
 # Project backups
 backups/
