--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -23,7 +23,12 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
+    - name: Install system dependencies for GUI testing
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y xvfb libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0 libfontconfig1 libglib2.0-0 libxcb-xfixes0
+
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
@@ -31,7 +36,7 @@ jobs:
     - name: Run tests with PyQt5 (using xvfb)
       env:
         CI: true
+        QT_QPA_PLATFORM: offscreen
+        DISPLAY: :99
       run: |
-        sudo apt-get update
-        sudo apt-get install -y xvfb
-        xvfb-run --auto-servernum --server-args='-screen 0 1920x1080x24' pytest -v --cov=widgets --cov=modules --cov=utils --cov=main_window tests/
+        xvfb-run --auto-servernum --server-args='-screen 0 1920x1080x24 -ac +extension GLX' pytest -v --cov=widgets --cov=modules --cov=utils --cov=main_window tests/
