🐛 Fix CI timeout issues: Add timeouts and better PyQt5 debugging
🔧 Changes:

  • Added 15min timeout to prevent hanging jobs

  • Manual Xvfb startup with proper initialization

  • Added PyQt5 setup verification step

  • Split tests: basic run first, then coverage

  • Added individual timeouts (10m basic, 5m coverage)

  • Added -x flag to stop on first failure for faster feedback

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
 
     strategy:
       matrix:
@@ -33,10 +34,30 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run tests with PyQt5 (using xvfb)
+    - name: Start Xvfb display server
+      run: |
+        sudo /usr/bin/Xvfb :99 -screen 0 1920x1080x24 -ac +extension GLX &
+        sleep 3
+
+    - name: Test PyQt5 setup
+      env:
+        DISPLAY: :99
+        QT_QPA_PLATFORM: offscreen
+      run: |
+        python -c "from PyQt5.QtWidgets import QApplication; app = QApplication([]); print('PyQt5 OK')"
+
+    - name: Run tests (basic first)
       env:
         CI: true
         QT_QPA_PLATFORM: offscreen
         DISPLAY: :99
       run: |
-        xvfb-run --auto-servernum --server-args='-screen 0 1920x1080x24 -ac +extension GLX' pytest -v --cov=widgets --cov=modules --cov=utils --cov=main_window tests/
+        timeout 10m pytest tests/ -v -x --tb=short
+
+    - name: Run tests with coverage
+      env:
+        CI: true
+        QT_QPA_PLATFORM: offscreen
+        DISPLAY: :99
+      run: |
+        timeout 5m pytest tests/ -v --cov=widgets --cov=modules --cov=utils --cov=main_window --cov-report=term-missing
