Add PyQt5-friendly linting configuration - Add pyproject.toml with mypy and pylint configurations - Add .pylintrc for local development - Update GitHub Actions workflow with PyQt5 compatibility notes - Update README.md with development and testing instructions - Configure linting to ignore PyQt5 false positives while maintaining code quality

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -61,3 +61,7 @@ jobs:
         DISPLAY: :99
       run: |
         timeout 5m pytest tests/ -v --cov=widgets --cov=modules --cov=utils --cov=main_window --cov-report=term-missing
+
+    # Note: We skip linting for PyQt5 projects due to numerous false positives
+    # with type hints and Qt attribute resolution. The pyproject.toml contains
+    # appropriate configurations if manual linting is needed locally.
