Auto snapshot at 2025-06-07 17:00

--- a/.gitignore
+++ b/.gitignore
@@ -113,6 +113,8 @@ logs/*.log*
 !logs/.gitkeep
 *.log
 debug.log
+.mypy_cache/
+.ruff_cache/
 
 # =======================================
 # 🖼️ GUI-related files (PyQt5, resources)
