--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,12 @@ PyQt5_sip==12.15.0
 # --- Test dependencies ---
 pytest==8.3.5
 pytest-qt==4.4.0
-pytest-cov==5.0.0  
+pytest-cov==5.0.0
 
 # --- Mock support for testing ---
 pytest-mock==3.14.1
+
+# --- Performance testing dependencies ---
+psutil==6.1.0
+tracemalloc  # Built-in Python module
+aiofiles==24.1.0  # For async file operations
