Fix pytest command: Remove unsupported --timeout argument

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,7 +45,7 @@ jobs:
         QT_QPA_PLATFORM: offscreen
         DISPLAY: :99
       run: |
-        xvfb-run -a pytest tests/ -v -x --tb=short --timeout=600
+        xvfb-run -a pytest tests/ -v -x --tb=short 
       timeout-minutes: 15
     
     - name: Run linting with ruff
