--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,9 +113,9 @@ ignore = [
     "B008",   # do not perform function calls in argument defaults
     "C901",   # too complex
     "SIM102", # nested if statements
-    "TC001", # typing imports should be in TYPE_CHECKING block
-    "TC002", # typing imports should be in TYPE_CHECKING block
-    "TC003", # typing imports should be in TYPE_CHECKING block
+    "TCH001", # typing imports should be in TYPE_CHECKING block
+    "TCH002", # typing imports should be in TYPE_CHECKING block
+    "TCH003", # typing imports should be in TYPE_CHECKING block
 ]
 
 [tool.ruff.lint.isort]
