feat: Add comprehensive UI component tests with CI-friendly setup
- Added tests/test_metadata_tree_view.py (10 tests)
  * Tree expansion/collapse behavior testing
  * Selection state management verification
  * Theme application consistency checks
  * Non-GUI logic tests for CI compatibility

- Added tests/test_hierarchical_combo_box.py (15 tests)
  * Dropdown population and group expansion testing
  * Chevron icon presence validation
  * Selection behavior and signal emission tests
  * Theme consistency across tree view components

- Added tests/test_theme_integration.py (10 tests)
  * Color consistency validation across UI states
  * QSS template generation testing
  * Chevron icon styling verification
  * Theme inheritance logic validation

- Enhanced test infrastructure:
  * Updated pyproject.toml with 'gui' and 'local_only' pytest markers
  * Enhanced conftest.py with CI detection and automatic GUI test skipping
  * Added CI-friendly skip patterns (@pytest.mark.skipif('CI' in os.environ))
  * Mock fixtures for theme colors and sample metadata

- Test coverage improvements:
  * 35 new test functions across UI components
  * Non-GUI tests run in CI (12 logic tests)
  * GUI tests skip gracefully on headless environments
  * Full compatibility with existing 248 test functions

Resolves issues with MetadataTreeView chevron display, HierarchicalComboBox
theme consistency, and provides foundation for UI regression testing while
maintaining GitHub Actions compatibility.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -141,8 +141,9 @@ markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
     "integration: marks tests as integration tests",
     "unit: marks tests as unit tests",
-    "gui: marks tests that require GUI",
-    "exiftool: marks tests that require exiftool"
+    "gui: marks tests that require GUI (skipped on CI)",
+    "exiftool: marks tests that require exiftool",
+    "local_only: marks tests that only run in local environment"
 ]
 filterwarnings = [
     "ignore::DeprecationWarning",
