fix: Clean up ruff linting issues
- Remove unused qtbot parameter from test_create_with_partial_signals
- Add docs and *.md to ruff exclude patterns in pyproject.toml
- Ensure ruff only checks Python files, not markdown documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,7 +85,7 @@ ignore_errors = true
 target-version = "py312"
 line-length = 100
 fix = true
-exclude = ["backups", ".cache", "temp", "reports", "venv", "__pycache__", "*.pyc"]
+exclude = ["backups", ".cache", "temp", "reports", "docs", "venv", "__pycache__", "*.pyc", "*.md"]
 
 [tool.ruff.lint]
 select = [
