--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,6 +118,11 @@ ignore = [
     "TC003", # typing imports should be in TYPE_CHECKING block
 ]
 
+# Per-file ignores for scripts and utilities
+[tool.ruff.lint.per-file-ignores]
+"scripts/*.py" = ["T201"]  # Allow print statements in scripts
+"tests/*.py" = ["T201"]     # Allow print statements in tests
+
 [tool.ruff.lint.isort]
 force-single-line = false
 combine-as-imports = true
