refactor: consolidate ResultsTableDialog variants and apply theme tokens
- Replace results_table_dialog.py with improved _new version (QTableView + theme styling)
- Remove redundant results_table_dialog_old.py and results_table_dialog_new.py files
- Add metadata_group_text theme token (#ddd6ba dark, #6b6b6b light)
- Add text_muted theme token to config for consistent muted UI text
- Update MetadataTreeItemDelegate to use theme token for root group colors
- Implement metadata tree selection restore after edit_value dialog (path tracking)
- Fix hover+selected text color handling in MetadataTreeItemDelegate

Technical improvements:
- 100% theme consistency: all hardcoded colors removed
- ResultsTableDialog now uses theme manager for all colors
- Selection restoration uses QTimer deferred callback for tree refresh
- Light theme support ready (theme tokens prepared)

--- a/resources/styles/main.qss.template
+++ b/resources/styles/main.qss.template
@@ -66,7 +66,7 @@ QTableView::item:selected {
 QHeaderView::section {
     background-color: {{table_header_bg}};
     color: {{table_header_text}};
-    padding: 4px 8px;
+    padding: 0px 8px;
     border: none;
     border-right: 1px solid {{border}};
     border-bottom: 1px solid {{border}};
@@ -115,8 +115,7 @@ QPushButton {
     color: {{button_text}};
     border: 1px solid {{border}};
     border-radius: 4px;
-    padding: 6px 12px;
-    min-height: 24px;
+    padding: 2px 8px;
 }
 
 QPushButton:hover {
@@ -127,6 +126,7 @@ QPushButton:hover {
 
 QPushButton:pressed {
     background-color: {{button_pressed_bg}};
+    color: {{button_pressed_text}};
 }
 
 QPushButton:disabled {
@@ -146,7 +146,7 @@ QLineEdit, QTextEdit, QPlainTextEdit {
     color: {{input_text}};
     border: 1px solid {{input_border}};
     border-radius: 4px;
-    padding: 4px 8px;
+    padding: 2px 6px;
     selection-background-color: {{selected}};
     selection-color: {{selected_text}};
 }
@@ -171,8 +171,7 @@ QComboBox {
     color: {{text}};
     border: 1px solid {{input_border}};
     border-radius: 4px;
-    padding: 4px 8px;
-    min-height: 24px;
+    padding: 2px 6px;
 }
 
 QComboBox:hover {
