fix: replace SVG chevron references with PNG files
- Use available chevron-right.png and chevron-down.png instead of missing SVG files
- Update theme_engine.py and main.qss.template to reference PNG resources
- Fixes Qt warnings about missing SVG files on application startup
- Maintains visual appearance with existing PNG assets

All 460 tests passing.

--- a/resources/styles/main.qss.template
+++ b/resources/styles/main.qss.template
@@ -101,7 +101,7 @@ QTreeView::branch {
 
 QTreeView::branch:has-children:closed {
     border-image: none;
-    image: url(resources/icons/chevron-right.svg);
+    image: url(resources/icons/chevron-right.png);
 }
 
 QTreeView::branch:has-children:open {
