Fix drag cancellation, metadata loading responsiveness, and icon paths
- Fix stuck drag state by ensuring cleanup in DragDropMixin.
- Allow cancellation of metadata loading by processing events in loop.
- Handle ESC key in FileTableView to cancel drags.
- Fix icon loading paths for SVG/PNG fallbacks.
- Improve ProgressDialog with cancellation support.
- Update MetadataTreeView drag handling.

--- a/resources/styles/main.qss.template
+++ b/resources/styles/main.qss.template
@@ -106,7 +106,7 @@ QTreeView::branch:has-children:closed {
 
 QTreeView::branch:has-children:open {
     border-image: none;
-    image: url(resources/icons/chevron-down.svg);
+    image: url(resources/icons/chevron-down.png);
 }
 
 /* ===== QPushButton ===== */
