feat(controllers): add MetadataController skeleton
- Create MetadataController with full method signatures
- Methods: load_metadata, reload_metadata, configure_metadata_options,
  export_metadata, state queries
- Added author/date header (Michael Economou, 2025-12-16)
- All 549 tests passing
- Part of Phase 1B Step 1B.1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,6 +103,7 @@ select = [
     "PIE", # flake8-pie
     "T20", # flake8-print
     "PYI", # flake8-pyi
+    "G",   # flake8-logging-format (enforce lazy logging)
 ]
 ignore = [
     "E501",   # line too long (handled by black)
